Managed Servers page layout issue
* changed the z-index of the add button

Request: DCS-1042

--- a/ui/webapp/src/app/modules/servers/components/managed-servers/managed-servers.component.css
+++ b/ui/webapp/src/app/modules/servers/components/managed-servers/managed-servers.component.css
@@ -4,6 +4,7 @@
   bottom: 40px !important;
   left: auto !important;
   position: fixed !important;
+  z-index: 9999;
 }
 
 .list-heading {
